--- a/src/Index.css
+++ b/src/Index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap");
+
 * {
   font-family: Nunito, sans-serif;
   padding: 0;
@@ -30,7 +32,7 @@ h4 {
   max-width: 617px;
   max-height: 763px;
   width: 100%;
-  height: 100%;
+  height: 763px;
   background-color: white;
   margin: auto;
   border-radius: 20px;
