--- a/src/Index.css
+++ b/src/Index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap");
 
 * {
   font-family: Nunito, sans-serif;
@@ -92,7 +93,7 @@ h4 {
 #footerForm {
   display: flex;
   flex-direction: row-reverse;
-  margin-right: 22px;
+  margin-top: 40px;
 }
 .btnDefault {
   display: flex;
@@ -228,6 +229,9 @@ h4 {
   margin: 30px 0;
 }
 
+.formboxCard {
+  margin: 40px 0;
+}
 .input {
   font-size: 16px;
   color: #767676;
